fix: text-align

--- a/src/pages/CatalogArticle/CatalogArticle.scss
+++ b/src/pages/CatalogArticle/CatalogArticle.scss
@@ -60,7 +60,7 @@
   }
 
   & p {
-    text-align: justify;
+    text-align: left;
     margin: 0 0 80px;
     font-family: $ptRootUI;
     font-weight: 400;
